--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+#/build
 
 # misc
 .DS_Store
@@ -24,3 +24,4 @@ yarn-error.log*
 
 /api/__pycache__
 .vscode
+/api/core/__pycache__
